feat: implement AI-powered receipt scanning pipeline and expense intelligence modules